--- a/src/Objects-callisthenics/pom.xml
+++ b/src/Objects-callisthenics/pom.xml
@@ -78,6 +78,10 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.module</groupId>
+			<artifactId>jackson-module-kotlin</artifactId>
+		</dependency>
 
 	</dependencies>
 
