--- a/src/Objects-callisthenics/src/main/resources/application.properties
+++ b/src/Objects-callisthenics/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=Objects-callisthenics
 
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/callisthenics
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/books
+spring.datasource.username=gustavopamplona
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
